// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drawer > custom header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > function footer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > function header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders custom size=large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_n_"
      aria-haspopup="dialog"
      type="button"
    >
      button
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders custom size=medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_i_"
      aria-haspopup="dialog"
      type="button"
    >
      button
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders custom size=small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_s_"
      aria-haspopup="dialog"
      type="button"
    >
      button
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with custom classNames 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders with default Props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_0_"
      aria-haspopup="dialog"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with default Props and function children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_3_"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with default Props and function children open 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders with disclosure 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with disclosure and onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open drawer
    </button>
  </div>
  <div>
    <div
      class="backdrop-drawer styles__i6gx4b7"
      data-testid="test-backdrop"
    >
      <dialog
        aria-label="drawer-test"
        aria-modal="true"
        class="styles_medium__vhehj61 styles__vhehj68 styles__i6gx4b8 styles_placement_right__i6gx4bf styles_size_medium__i6gx4bl"
        data-size="medium"
        data-testid="test"
        id="drawer-test"
        open=""
        style="--i6gx4b0: -0px; --i6gx4b1: 1.1;"
        tabindex="0"
      >
        <div
          class="styles__vhehj63 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
        >
          <h2
            class="styles__vhehj66 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_headingSmallStrong__1do42ls16 style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            header
          </h2>
          <hr
            aria-orientation="horizontal"
            class="styles__kqki61b styles_direction_horizontal__kqki61c styles_sentiment_neutral__kqki61i"
            style="--kqki610: 1px;"
          />
          <div
            class="styles__vhehj64"
          >
            <div
              class="styles__vhehj65"
            >
              <div>
                drawer
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__i6gx4b3"
        >
          <button
            class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
            data-testid="test-close-button"
            type="button"
          >
            <span
              class="styles__ahdbou0"
            >
              close
            </span>
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
        </div>
      </dialog>
    </div>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with open={true} 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders with push 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders without disclosure 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders without separator 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > with footer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;
